# MADS23a_PM-HA_Filali_Teppris_Rommelfangen

./: .gitignore  README.md  pyproject.toml
notebooks/: 0_Hauptnotebook.ipynb  Hauptnotebook.ipynb  LLM_Agent_test.ipynb  LLM_State_Graph_Agent_for_PM.ipynb  PE_Describe_Vis_Processflow.ipynb  PK_Patterns_NonConformance.ipynb  PP_Useful_KPIs.ipynb  flemming_test.ipynb
notebooks/0_Hauptnotebook/: Hauptnotebook.ipynb
notebooks/1_Process_Discovery/: Durations and patterns.ipynb  Rejections_and_reasons.ipynb
notebooks/2_Process_Conformance/: Patterns that indicate non-conformance.ipynb
notebooks/3_Process_Enhancement/: Bottlenecks_and_reasons.ipynb  PP_Useful_KPIs.ipynb  Useful_KPIs.ipynb
src/: loader.py  settings.py
