[tool.poetry]
name = "code-ha-process-mining"
version = "0.1.0"
description = ""
authors = ["FlemmingR <146717357+Flemming-R@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12" 
matplotlib = "^3.9.1.post1"
numpy = "1.24.3"
pandas = "^2.2.2"
pm4py = "^2.7.11.12"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.3"
seaborn = "^0.13.2"
langgraph = "^0.2.3"
langchain-community = "^0.2.12"
langchain-openai = "^0.1.21"
langchain-experimental = "^0.0.64"
python-dotenv = "^1.0.1"
scikit-learn = "^1.5.1"
beautifulsoup4 = "^4.12.3"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
